# Hexapod-Robot

./: .gitignore  README.md
Data/: Magnetometer Lidar On_Off.txt  Magnetometer Rotation Data.txt  Test 1 Results.txt
Sample_Code/: mpu_stream.py
Sample_Code/Server/: test_battery.py
install/: local_setup.sh  setup.sh
install/hexapod_locomotion/lib/hexapod_locomotion/: calibration  calibration_matrix  calibration_points  imu_publisher
install/hexapod_locomotion/share/hexapod_locomotion/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hexapod_locomotion/share/hexapod_locomotion/config/: locomotion.yaml  servo_calibration.yaml
install/hexapod_locomotion/share/hexapod_locomotion/launch/: hexapod_core.launch.py
log/: latest_build
ros2/hexapod_bringup/: package.xml  setup.cfg  setup.py
ros2/hexapod_bringup/config/: slam_toolbox.yaml
ros2/hexapod_bringup/launch/: exploration_stack.launch.py  mapping_bringup.launch.py  pose_stack.launch.py  wavefront_exploration_stack.launch.py
ros2/hexapod_description/: package.xml  setup.py
ros2/hexapod_interfaces/: CMakeLists.txt  package.xml
ros2/hexapod_interfaces/hexapod_interfaces/: __init__.py  camera_led.py  led.py  led_matrix.py  rpi_ledpixel.py  spi_ledpixel.py
ros2/hexapod_interfaces/scripts/: camera_led  led_matrix
ros2/hexapod_locomotion/: deep-research-report.md  package.xml  setup.cfg  setup.py
ros2/hexapod_locomotion/config/: imu_kalman_calibration.yaml  locomotion.yaml  servo_calibration.yaml
ros2/hexapod_locomotion/hexapod_locomotion/: bno055_publisher.py  calibration.py  calibration_matrix.py  calibration_points.py  calibration_store.py  crab_path_follower.py  face_detector.py  gait_math.py  imu_fallback.py  imu_publisher.py  kalman_calibration.py  kalman_calibration_store.py  kalman_filter.py  lidar_open_space_explorer.py  locomotion.py  mpu6050_publisher.py  path_plan.py  pid.py  qr_code_detector.py  qr_wall_marker.py  servo_driver.py  wavefront_explorer.py  yaw_control.py
ros2/hexapod_locomotion/launch/: face_detection.launch.py  hexapod_core.launch.py  path_plan.launch.py  qr_detection.launch.py
ros2/hexapod_locomotion/test/: test_bno055_quaternion.py  test_gait_math.py  test_imu_fallback.py  test_kalman_calibration.py  test_yaw_control.py  test_yaw_filter.py
ros2/hexapod_slam/: package.xml  setup.cfg  setup.py
ros2/hexapod_slam/config/: ekf.yaml  graph_visualizer.yaml  maze_graph_builder.yaml  maze_graph_planner.yaml  slam_toolbox.yaml
ros2/hexapod_slam/hexapod_slam/: __init__.py  frame_utils.py  gap_following_explorer.py  graph_io.py  graph_types.py  grid_graph.py  map_frontier_utils.py  maze_cell_memory.py  maze_graph_builder.py  maze_graph_planner.py  maze_graph_visualizer.py  maze_mission.py  path_to_local_goal.py  scan_cmd_vel_safety.py
ros2/hexapod_slam/launch/: maze_mapping.launch.py  maze_mission.launch.py  slam.launch.py
ros2/hexapod_slam/resource/: hexapod_slam
ros2/hexapod_slam/test/: test_graph_builder.py  test_maze_regression.py
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/install/hexapod_bringup/share/hexapod_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/install/hexapod_interfaces/lib/hexapod_interfaces/: camera_led
ros2/install/hexapod_interfaces/share/hexapod_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/install/hexapod_interfaces/share/hexapod_interfaces/cmake/: hexapod_interfacesConfig-version.cmake  hexapod_interfacesConfig.cmake
ros2/install/hexapod_locomotion/lib/hexapod_locomotion/: bno055_publisher  calibration  calibration_matrix  calibration_points  crab_path_follower  face_detector  imu_publisher  locomotion  path_plan  servo_driver
ros2/install/hexapod_locomotion/share/hexapod_locomotion/: package.dsv  package.ps1  package.sh  package.xml
ros2/install/hexapod_slam/lib/hexapod_slam/: gap_following_explorer  maze_graph_builder  maze_graph_planner  maze_graph_visualizer  path_to_local_goal  scan_cmd_vel_safety
ros2/install/hexapod_slam/share/hexapod_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/install/hexapod_slam/share/hexapod_slam/config/: ekf.yaml  (+4 more)
ros2/log/: latest_build  latest_list  latest_test
(+15 files in other folders)
